; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_pad.c___pad_disable.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_pad.c___pad_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__pad_enabledbits = common dso_local global i32 0, align 4
@__pad_waitingbits = common dso_local global i32 0, align 4
@__pad_pendingbits = common dso_local global i32 0, align 4
@__pad_checkingbits = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @__pad_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__pad_disable(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @_CPU_ISR_Disable(i32 %5)
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @PAD_ENABLEDMASK(i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @SI_DisablePolling(i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = xor i32 %11, -1
  %13 = load i32, i32* @__pad_enabledbits, align 4
  %14 = and i32 %13, %12
  store i32 %14, i32* @__pad_enabledbits, align 4
  %15 = load i32, i32* %4, align 4
  %16 = xor i32 %15, -1
  %17 = load i32, i32* @__pad_waitingbits, align 4
  %18 = and i32 %17, %16
  store i32 %18, i32* @__pad_waitingbits, align 4
  %19 = load i32, i32* %4, align 4
  %20 = xor i32 %19, -1
  %21 = load i32, i32* @__pad_pendingbits, align 4
  %22 = and i32 %21, %20
  store i32 %22, i32* @__pad_pendingbits, align 4
  %23 = load i32, i32* %4, align 4
  %24 = xor i32 %23, -1
  %25 = load i32, i32* @__pad_checkingbits, align 4
  %26 = and i32 %25, %24
  store i32 %26, i32* @__pad_checkingbits, align 4
  %27 = load i32, i32* %2, align 4
  %28 = call i32 @SYS_SetWirelessID(i32 %27, i32 0)
  %29 = load i32, i32* %3, align 4
  %30 = call i32 @_CPU_ISR_Restore(i32 %29)
  ret void
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @PAD_ENABLEDMASK(i32) #1

declare dso_local i32 @SI_DisablePolling(i32) #1

declare dso_local i32 @SYS_SetWirelessID(i32, i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
